# dataBuilder

./: .gitignore  DataBuilder.cabal  LICENSE  dataBuilder.cabal  readme.md  stack.yaml  stack.yaml.802
app/: Main.hs
dataBuilder-optionParser/: LICENSE  dataBuilder-optionParser.cabal  stack.yaml
dataBuilder-optionParser/app/: Main.hs
dataBuilder-optionParser/src/DataBuilder/: OptionParser.hs  OptionParser.hs.old
lib/: DataBuilder.hs  DataBuilderTH.hs  DataBuilderTypes.hs
lib/DataBuilder/: .#Types.hs  GenericSOP.hs  Generics.hs  InternalTypes.hs  TH.hs  Types.hs  generic-sop.hs
optionParser/: Main.hs  OptPABuilder.hs
src/: DataBuilder.hs
src/DataBuilder/: .#GenericSOP.hs  .#InternalTypes.hs  GenericSOP.hs  InternalTypes.hs  TH.hs  Types.hs
