name:                DataBuilder
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/TH#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
copyright:           2016 Adam Conner-Sax
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     DataBuilder.TH
                     , DataBuilder.Types
                     , DataBuilder.Generics
  other-modules:      DataBuilder.InternalTypes
  build-depends:       base >= 4.7 && < 5, template-haskell, generics-eot, containers
  default-language:    Haskell2010

executable dataBuilderDemo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , template-haskell
                     , DataBuilder
  default-language:    Haskell2010


executable dataBuilder-OptionParser
  hs-source-dirs:      optionParser
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , template-haskell
                     , DataBuilder
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adamConnerSax/dataBuilder
