name: dataBuilder
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2016 Adam Conner-Sax
maintainer: adam_conner_sax@yahoo.com
homepage: http://github.com/githubuser/TH#readme
synopsis: Initial project template from stack
description:
    Please see README.md
category: Web
author: Adam Conner-Sax

source-repository head
    type: git
    location: https://github.com/adamConnerSax/dataBuilder

library
    exposed-modules:
        DataBuilder                        
        DataBuilder.TH
        DataBuilder.Types
        DataBuilder.GenericSOP
    build-depends:
        base >=4.7 && <5,
        template-haskell -any,
        generics-sop -any,          
        containers -any
    default-language: Haskell2010
    hs-source-dirs: lib
    other-modules:
        DataBuilder.InternalTypes

executable dataBuilderDemo
    main-is: Main.hs
    build-depends:
        base -any,
        template-haskell -any,
        dataBuilder -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable dataBuilder-OptionParser
    main-is: Main.hs
    other-modules: OptPABuilder
    build-depends:
        base -any,
        template-haskell -any,
        dataBuilder -any,
        optparse-applicative -any
    default-language: Haskell2010
    hs-source-dirs: optionParser
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

