name:                dataBuilder-optionParser
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adamConnerSax/dataBuilder-optionParser#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
copyright:           2015 Adam Conner-Sax
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , dataBuilder
                     , template-haskell
                     , optparse-applicative -any
  default-language:    Haskell2010

executable dataBuilder-OptionParser
    main-is: Main.hs
    build-depends:
                  base -any
                , template-haskell -any
                , dataBuilder 
    default-language: Haskell2010
    hs-source-dirs: optionParser
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  
source-repository head
  type:     git
  location: https://github.com/adamConnerSax/dataBuilder-optionParser
